Terminando modelado de la interfaz del encriptador

--- a/index.html
+++ b/index.html
@@ -25,11 +25,26 @@
             <input type="text" name="ingresa-text" id="input-texto" placeholder="Ingrese el texto aqui">
         </section>
 
+        <section class="rectangle-panel">
+            <div class="panel">
+                <img class="muñeco" src="./img/muñeco.png" alt="Imagen Muñeco con lupa">
+                <div class="messages">
+                    <div class="message-fail"> Ningún mensaje fue encontrado</div>
+                    <div class="message-enterText"> Ingresa el texto que desees encriptar o desencriptar</div>
+                </div>
+            </div>
+        </section>
+
         <section class="message-warning">
             <div class="warning"> 
                 <img src="./img/exclamation.png" alt="Simbolo Warning" class="warningImage">
                 <div class="text-warning">Solo letras minúsculas y sin acentos</div>
             </div>
+        </section>
+
+        <section class="buttons">
+            <button class="btn-encriptar"><a class="text-encriptar">Encriptar</a></button>
+            <button class="btn-desencriptar"> <div class="text-desencriptar"> Desencriptar</div></button>
         </section>
 
     </main>
