--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="panel">
                 <img class="muñeco" src="./img/muñeco.png" alt="Imagen Muñeco con lupa">
                 <div class="messages">
-                    <div class="message-fail"> Ningún mensaje fue encontrado</div>
+                    <div class="message-fail"> Ningun mensaje fue encontrado</div>
                     <div class="message-enterText"> Ingresa el texto que desees encriptar o desencriptar</div>
                 </div>
             </div>
