Se cambiaron los input por textArea para mejorar la visualizacion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section class="texto-encriptar">
             <label for="ingresa-text"></label>
-            <input type="text" name="ingresa-text" id="input-texto" placeholder="Ingrese el texto aqui">
+            <textarea type="text" name="ingresa-text" id="input-texto" placeholder="Ingrese el texto aqui"></textarea>
         </section>
 
         <section class="rectangle-panel panel">
@@ -38,7 +38,7 @@
 
             <div class="invisible" id="panelOutputText">
                 <label for="finalText"></label>
-                <input type="text" name="finalText" id="final-text">
+                <textarea type="text" name="finalText" id="final-text"></textarea>
                 <button class="btn-copy"><a class="text-copy">Copiar</a></button>
             </div>
         </section>
