Realizacion de desencriptado de texto, tambien se mejoro cuando no encuentra ningun texto me muestre los mensajes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="invisible" id="panelOutputText">
                 <label for="finalText"></label>
-                <textarea type="text" name="finalText" id="final-text"></textarea>
+                <textarea type="text" name="finalText" id="final-text" readonly></textarea>
                 <button class="btn-copy"><a class="text-copy">Copiar</a></button>
             </div>
         </section>
@@ -57,7 +57,8 @@
 
     </main>
     <!-- llamamos a nuestros scripts -->
-    <script src="./js/encriptador.js"></script>
+    <script src="js/encriptador.js"></script>
+    <script src="js/desencriptador.js"></script>
 
 </body>
 </html>
