Se agrego el archivo copyText donde copia el texto que se haya encriptado o desencriptado

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- llamamos a nuestros scripts -->
     <script src="js/encriptador.js"></script>
     <script src="js/desencriptador.js"></script>
+    <script src="js/copyText.js"></script>
 
 </body>
 </html>
