Se agrego el archivo responsive.js donde se realizaran los metedos para hacer los cambios y hacer responsive la interfaz

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="js/encriptador.js"></script>
     <script src="js/desencriptador.js"></script>
     <script src="js/copyText.js"></script>
+    <script src="js/responsive.js"></script>
 
 </body>
 </html>
