--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto Challenge</title>
     
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- El archvio reset.css nos reinicia nuestros estilos para que tome los estilos que le demos-->
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
 
     <link rel="icon" href="./img/encrypted-data.ico">
 
