--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- El archvio reset.css nos reinicia nuestros estilos para que tome los estilos que le demos-->
     <link rel="stylesheet" href="css/reset.css">
 
-    <link rel="icon" href="./img/encrypted-data.ico">
+    <link rel="icon" href="img/encrypted-data.ico">
 
 </head>
 <body>
